--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "auth0": "^2.37.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "jotform": "^0.1.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-iframe": "^1.8.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
