--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "jotform": "^0.1.5",
+    "mdb-ui-kit": "^3.10.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
