--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "auth0": "^2.37.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.6.2",
     "jotform": "^0.1.5",
+    "mdb-react-ui-kit": "^2.2.0",
     "mdb-ui-kit": "^3.10.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-iframe": "^1.8.0",
     "react-router-dom": "^6.2.1",
