--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.6.2",
+    "faker": "^5.5.3",
     "jotform": "^0.1.5",
     "mdb-react-ui-kit": "^2.2.0",
     "mdb-ui-kit": "^3.10.1",
