--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-chartjs-2": "^4.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-iframe": "^1.8.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "with-router": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
